@@ -6,9 +6,9 @@
  * to you under the Apache License, Version 2.0 (the
  * "License"); you may not use this file except in compliance
  * with the License.  You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
+ * <p>
+ * http://www.apache.org/licenses/LICENSE-2.0
+ * <p>
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -18,10 +18,10 @@
 
 package org.apache.tez.dag.api.client.registry.zookeeper;
 
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
 
 import org.apache.curator.RetryLoop;
 import org.apache.curator.RetryPolicy;
@@ -42,19 +42,20 @@ import org.slf4j.LoggerFactory;
 
 /**
  * Curator/Zookeeper impl of AMRegistry (for internal use only)
- * Clients should use org.apache.tez.dag.api.client.registry.zookeeper.ZkAMRegistryClient instead
+ * Clients should use org.apache.tez.dag.api.client.registry.zookeeper.ZkAMRegistryClient instead.
  */
 @InterfaceAudience.Private
 public class ZkAMRegistry extends AMRegistry {
 
   private static final Logger LOG = LoggerFactory.getLogger(ZkAMRegistry.class);
 
+  private final List<AMRecord> amRecords = new ArrayList<>();
+  private final String externalId;
+
   private CuratorFramework client = null;
   private String namespace = null;
-  private List<AMRecord> amRecords = new ArrayList<>();
   private ZkConfig zkConfig = null;
   private boolean started = false;
-  private String externalId;
 
   public ZkAMRegistry(String externalId) {
     super("ZkAMRegistry");
@@ -63,7 +64,7 @@ public class ZkAMRegistry extends AMRegistry {
 
   @Override
   public void serviceInit(Configuration conf) {
-    if(zkConfig == null) {
+    if (zkConfig == null) {
       zkConfig = new ZkConfig(conf);
       this.client = zkConfig.createCuratorFramework();
       this.namespace = zkConfig.getZkNamespace();
@@ -71,8 +72,9 @@ public class ZkAMRegistry extends AMRegistry {
     }
   }
 
-  @Override public void serviceStart() throws Exception {
-    if(!started) {
+  @Override
+  public void serviceStart() throws Exception {
+    if (!started) {
       client.start();
       started = true;
       LOG.info("AMRegistryZkImpl started");
@@ -80,9 +82,10 @@ public class ZkAMRegistry extends AMRegistry {
   }
 
   //Deletes from Zookeeper AMRecords that were added by this instance
-  @Override public void serviceStop() throws Exception {
+  @Override
+  public void serviceStop() throws Exception {
     List<AMRecord> records = new ArrayList<>(amRecords);
-    for(AMRecord amRecord : records) {
+    for (AMRecord amRecord : records) {
       remove(amRecord);
     }
     client.close();
@@ -91,20 +94,23 @@ public class ZkAMRegistry extends AMRegistry {
 
   //Serialize AMRecord to ServiceRecord and deliver the JSON bytes to
   //zkNode at the path:  <TEZ_AM_REGISTRY_NAMESPACE>/<appId>
-  @Override public void add(AMRecord server) throws Exception {
+  @Override
+  public void add(AMRecord server) throws Exception {
     RegistryUtils.ServiceRecordMarshal marshal = new RegistryUtils.ServiceRecordMarshal();
     String json = marshal.toJson(server.toServiceRecord());
     try {
       final String path = namespace + "/" + server.getApplicationId().toString();
-      client.setData().forPath(path, json.getBytes());
+      client.setData().forPath(path, json.getBytes(StandardCharsets.UTF_8));
       LOG.info("Added AMRecord to zkpath {}", path);
-    } catch(KeeperException.NoNodeException nne) {
-      client.create().creatingParentContainersIfNeeded().withMode(CreateMode.EPHEMERAL).forPath(namespace + "/" + server.getApplicationId().toString(), json.getBytes());
+    } catch (KeeperException.NoNodeException nne) {
+      client.create().creatingParentContainersIfNeeded().withMode(CreateMode.EPHEMERAL)
+          .forPath(namespace + "/" + server.getApplicationId().toString(), json.getBytes(StandardCharsets.UTF_8));
     }
     amRecords.add(server);
   }
 
-  @Override public void remove(AMRecord server) throws Exception {
+  @Override
+  public void remove(AMRecord server) throws Exception {
     amRecords.remove(server);
     final String path = namespace + "/" + server.getApplicationId().toString();
     client.delete().forPath(path);
@@ -112,7 +118,7 @@ public class ZkAMRegistry extends AMRegistry {
   }
 
   @Override
-  public Optional<ApplicationId> generateNewId() throws Exception {
+  public ApplicationId generateNewId() throws Exception {
     createNamespaceIfNotExists();
     long namespaceCreationTime = getNamespaceCreationTime();
 
@@ -120,11 +126,11 @@ public class ZkAMRegistry extends AMRegistry {
     long startTime = System.currentTimeMillis();
     RetryPolicy retryPolicy = zkConfig.getRetryPolicy();
     int tryId = 0;
-    for(int i = 0; (i < zkConfig.getCuratorMaxRetries()) && !success; i++) {
+    for (int i = 0; (i < zkConfig.getCuratorMaxRetries()) && !success; i++) {
       List<String> children = client.getChildren().forPath(namespace);
-      if((children != null) && (children.size() != 0)) {
-        Collections.sort(children, Collections.reverseOrder());
-        String last = children.get(0);
+      if (children != null && !children.isEmpty()) {
+        children.sort(Collections.reverseOrder());
+        String last = children.getFirst();
         ApplicationId lastAppId = ApplicationId.fromString(last);
         tryId = lastAppId.getId() + 1;
       }
@@ -135,22 +141,23 @@ public class ZkAMRegistry extends AMRegistry {
             .withMode(CreateMode.EPHEMERAL)
             .forPath(namespace + "/" + tryAppId.toString(), new byte[0]);
         success = true;
-      } catch(KeeperException.NodeExistsException nodeExists) {
+      } catch (KeeperException.NodeExistsException nodeExists) {
         long elapsedTime = System.currentTimeMillis() - startTime;
         retryPolicy.allowRetry(i + 1, elapsedTime, RetryLoop.getDefaultRetrySleeper());
         tryId++;
       }
     }
-    if(success) {
-      return Optional.of(ApplicationId.newInstance(namespaceCreationTime, tryId));
+    if (success) {
+      return ApplicationId.newInstance(namespaceCreationTime, tryId);
     } else {
       throw new RuntimeException("Could not obtain unique ApplicationId after " +
           zkConfig.getCuratorMaxRetries() + " tries");
     }
   }
 
-  @Override public AMRecord createAmRecord(ApplicationId appId, String hostName, int port) {
-    return new AMRecord(appId, hostName, port, externalId);
+  @Override
+  public AMRecord createAmRecord(ApplicationId appId,  String hostName, String hostIp, int port, String computeName) {
+    return new AMRecord(appId, hostName, hostIp, port, externalId, computeName);
   }
 
   private long getNamespaceCreationTime() throws Exception {
@@ -161,7 +168,7 @@ public class ZkAMRegistry extends AMRegistry {
   private void createNamespaceIfNotExists() throws Exception {
     try {
       client.create().creatingParentContainersIfNeeded().forPath(namespace);
-    } catch(KeeperException.NodeExistsException nodeExists) {
+    } catch (KeeperException.NodeExistsException nodeExists) {
       LOG.info("Namespace already exists, will use existing: {}", namespace);
     }
   }
